# coding_practice

./: .gitattributes  .gitignore  README.md
2018/day-01/: freq_repeat.exs  freqfirst.exs
2018/day-02/: Makefile  README.md  checksum.exs  similarity.exs
2018/day-03/: Makefile  README.md  nonoverlap.exs  overlap.exs  squares.ex
2018/day-06/: README.md
advent-2015/: Makefile  README.md
advent-2018/: .gitignore
advent-2019/: .eslintrc.js
advent-2020/: Makefile  README.md
advent-2021/: new-day.sh
advent-2022/: .eslintrc.js  Makefile
advent-2025/: .tool-versions
day-01/: freqfirst.exs  freqsum.exs
euler-rust/: Cargo.toml  Makefile
euler-rust/src/: bcd.rs  euler.rs  factorizer.rs  lib.rs  main.rs  math.rs  primes.rs  problem0001.rs  problem0002.rs  problem0003.rs  problem0004.rs  problem0005.rs  problem0006.rs  problem0007.rs  problem0008.rs  problem0009.rs  problem0010.rs  problem0011.rs  problem0012.rs  problem0013.rs  problem0014.rs  problem0015.rs  problem0016.rs  problem0017.rs  problem0018.rs  problem0019.rs  problem0020.rs  problem0021.rs  problem0022.rs  problem0023.rs  problem0024.rs  problem0025.rs  problem0026.rs  problem0027.rs  problem0028.rs  problem0029.rs  problem0030.rs  problem0031.rs  problem0032.rs  problem0033.rs  (+2 more)
hogan-57/: README.md
hogan-57/5-func/valid_input/: Cargo.toml
hogan-57/5-func/valid_input/src/: lib.rs  main.rs
hogan-57/7-struct/emp_list/: Cargo.toml  employees.txt
hogan-57/7-struct/emp_list/src/: lib.rs  main.rs
puzzles/: PUZZLES.md
rust/: README.md
rust/flappy/: Cargo.toml
rust/flappy/src/: main.rs
synacor/: README.md  arch-spec.txt  dungeon.txt  input.txt  teleport.txt
(+2021 files in other folders)
