[package]
name = "euler-rust"
version = "0.1.0"
authors = ["bjn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.8.0"
itertools = "0.9"
maplit = "1"

[dependencies.rug]
version = "1.11.0"
default-features = false
features = ["integer", "rational", "float"]
