[package]
name = "flappy"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>", "Brent J. Nordquist <brent@nordist.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "=0.8.1", default-features = false, features = ["crossterm"] }
bracket-terminal = { version = "=0.8.1", default-features = false }
